<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.RegisterFragment">

        <ImageView
            android:id="@+id/register_imageUser"
            android:layout_width="0dp"
            android:layout_height="171dp"
            android:layout_marginTop="38dp"
            android:layout_marginBottom="32dp"
            android:src="@drawable/user_icon"
            app:layout_constraintBottom_toTopOf="@+id/register_titleUserCompleteNames"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_titleUserCompleteNames"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/complete_name"
            android:textColorHint="@color/color_text"
            app:layout_constraintBottom_toTopOf="@+id/register_titleUserEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/register_userCompleteName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans"
                android:inputType="textPersonName"
                android:padding="@dimen/editText_padding"
                android:textSize="@dimen/editText_textSize" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_titleUserEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/Email"
            android:textColorHint="@color/color_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/register_titleUserPhone">

            <EditText
                android:id="@+id/register_userEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/nunito_sans"
                android:padding="@dimen/editText_padding"
                android:textSize="@dimen/editText_textSize"
                android:textColor="@color/color_text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_titleUserPhone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/phone_number"
            android:textColorHint="@color/color_text"
            app:layout_constraintBottom_toTopOf="@+id/register_titleUserPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/register_userPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:fontFamily="@font/nunito_sans"
                android:padding="@dimen/editText_padding"
                android:textSize="@dimen/editText_textSize"
                android:textColor="@color/color_text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_titleUserPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="50dp"
            android:hint="@string/Password"
            android:textColorHint="@color/color_text"
            app:layout_constraintBottom_toTopOf="@+id/button_registerUser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" >

            <EditText
                android:id="@+id/register_userPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans"
                android:inputType="textPassword"
                android:padding="@dimen/editText_padding"
                android:textSize="@dimen/editText_textSize"
                android:textColor="@color/color_text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_registerUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button_background_color"
            android:fontFamily="@font/nunito_sans"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingStart="@dimen/button_padding"
            android:paddingEnd="@dimen/button_padding"
            android:paddingBottom="@dimen/button_padding"
            android:text="@string/create_user"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/button_textSize"
            app:layout_constraintBottom_toTopOf="@+id/text_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:text="@string/text_login"
            android:textStyle="bold"
            android:textColor="@color/color_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>